--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 .flexible-container{
     display: flex;
 }
+.header{
+    margin-bottom: 50px;
+}
 h1{
     font-size: 50px;
     margin: 0 0 10px 0;
@@ -23,14 +26,33 @@ h1{
 p{
     color: #524f4f;
 }
-.half-width1{
+.header-half-width1{
     width: 50%;
     padding-top: 10%;
     padding-left: 6%;
 }
-.half-width2{
+.header-half-width2{
     width: 50%;   
 }
 .header img{
     width: 93%;
+}
+.about{
+    background-image: url(images/about-background.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center ;
+    padding-top: 30px;
+}
+.about-half-width1{
+    width: 50%;
+    text-align: center;
+}
+.about-half-width1 img{
+   width: 50%;
+   height: 100%;
+}
+.about-half-width2{
+    width: 50%;
+    padding-top: 7%;
 }
